fix(website): add spacing to unconfirmed account section in login form

--- a/apps/website/app/scss/components/_form.scss
+++ b/apps/website/app/scss/components/_form.scss
@@ -341,6 +341,17 @@ input:-webkit-autofill {
     cursor: not-allowed;
   }
 
+  &__resend-confirmation {
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+
+    p {
+      margin: 0;
+    }
+  }
+
   &-check {
     display: flex;
     align-items: center;
